modify README, add configobj support

--- a/README
+++ b/README
@@ -5,9 +5,16 @@ sshhelper
 shhhelper is a simple script which helps 
 you ssh into your machines conveniently.
 
-you should have **pexpect** to make this script
+this script keeps a config file in ~/.sshhelper_config,
+you can add your hosts there
+
+you should have **pexpect** and **configobj** to make this script
 work.
     
     $ easy_install pexpect
 
     or go to http://www.noah.org/wiki/pexpect
+
+    $ easy_install configobj
+
+    or go to http://www.voidspace.org.uk/python/configobj.html
